--- a/[HTML] Presentation Number Guessing Game By wk18k.html
+++ b/[HTML] Presentation Number Guessing Game By wk18k.html
@@ -1215,6 +1215,7 @@
                     data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
                     <h1>เกมทายเลข</h1>
                     <h2>Number Guess Game</h2>
+                    <center><a href="[PDF] Presentation Number Guessing Game By wk18k.pdf">ดาวน์โหลด PDF</a></center>
                     <footer>เกมทายเลข (Number Guess Game) วัชกร บุตร์ดีวงษ์</footer>
                 </section>
             </foreignObject>
